--- a/themes/wwcomps/front-page.html
+++ b/themes/wwcomps/front-page.html
@@ -531,6 +531,109 @@
              </div>
           </div>
           <div class="col-md-12">
+            <div class="filter-slider-cntlr">
+              <div class="winnersSlider">
+                <div class="winnersSlideItem">
+                  <div class="winners-grd-item">
+                    <div class="winners-grd-item-fea-img-cntlr">
+                      <a class="overlay-link" href="#"></a>
+                      <div class="inline-bg" style="background: url(assets/images/winner-hm--Img-01.jpg);"></div>
+                    </div>
+                    <div class="winners-grd-item-des mHc">
+                      <h6 class="fl-h6 mHc1 hwgid-title"><a href="#">PLAYSTATION 5 BUNDLE</a></h6>
+                      <strong class="winners-grd-date">24/12/2020</strong>
+                    </div>
+                  </div>
+                </div>
+                <div class="winnersSlideItem">
+                  <div class="winners-grd-item">
+                    <div class="winners-grd-item-fea-img-cntlr">
+                      <a class="overlay-link" href="#"></a>
+                      <div class="inline-bg" style="background: url(assets/images/winner-hm--Img-02.jpg);"></div>
+                    </div>
+                    <div class="winners-grd-item-des mHc">
+                      <h6 class="fl-h6 mHc1 hwgid-title"><a href="#">EDEN PROJECT WEEKEND</a></h6>
+                      <strong class="winners-grd-date">12/12/2020</strong>
+                    </div>
+                  </div>
+                </div>
+                <div class="winnersSlideItem">
+                  <div class="winners-grd-item">
+                    <div class="winners-grd-item-fea-img-cntlr">
+                      <a class="overlay-link" href="#"></a>
+                      <div class="inline-bg" style="background: url(assets/images/winner-hm--Img-03.jpg);"></div>
+                    </div>
+                    <div class="winners-grd-item-des mHc">
+                      <h6 class="fl-h6 mHc1 hwgid-title"><a href="#">VOLKSWAGEN TRANSPORTER T6 KOMBI</a></h6>
+                      <strong class="winners-grd-date">25/11/2020</strong>
+                    </div>
+                  </div>
+                </div>
+                <div class="winnersSlideItem">
+                  <div class="winners-grd-item">
+                    <div class="winners-grd-item-fea-img-cntlr">
+                      <a class="overlay-link" href="#"></a>
+                      <div class="inline-bg" style="background: url(assets/images/winner-hm--Img-04.jpg);"></div>
+                    </div>
+                    <div class="winners-grd-item-des mHc">
+                      <h6 class="fl-h6 mHc1 hwgid-title"><a href="#">ROLEX DEEPSEA BLUE LIMITED EDITION</a></h6>
+                      <strong class="winners-grd-date">03/11/2020</strong>
+                    </div>
+                  </div>
+                </div>
+                <div class="winnersSlideItem">
+                  <div class="winners-grd-item">
+                    <div class="winners-grd-item-fea-img-cntlr">
+                      <a class="overlay-link" href="#"></a>
+                      <div class="inline-bg" style="background: url(assets/images/winner-hm--Img-01.jpg);"></div>
+                    </div>
+                    <div class="winners-grd-item-des mHc">
+                      <h6 class="fl-h6 mHc1 hwgid-title"><a href="#">PLAYSTATION 5 BUNDLE</a></h6>
+                      <strong class="winners-grd-date">24/12/2020</strong>
+                    </div>
+                  </div>
+                </div>
+                <div class="winnersSlideItem">
+                  <div class="winners-grd-item">
+                    <div class="winners-grd-item-fea-img-cntlr">
+                      <a class="overlay-link" href="#"></a>
+                      <div class="inline-bg" style="background: url(assets/images/winner-hm--Img-02.jpg);"></div>
+                    </div>
+                    <div class="winners-grd-item-des mHc">
+                      <h6 class="fl-h6 mHc1 hwgid-title"><a href="#">EDEN PROJECT WEEKEND</a></h6>
+                      <strong class="winners-grd-date">12/12/2020</strong>
+                    </div>
+                  </div>
+                </div>
+                <div class="winnersSlideItem">
+                  <div class="winners-grd-item">
+                    <div class="winners-grd-item-fea-img-cntlr">
+                      <a class="overlay-link" href="#"></a>
+                      <div class="inline-bg" style="background: url(assets/images/winner-hm--Img-03.jpg);"></div>
+                    </div>
+                    <div class="winners-grd-item-des mHc">
+                      <h6 class="fl-h6 mHc1 hwgid-title"><a href="#">VOLKSWAGEN TRANSPORTER T6 KOMBI</a></h6>
+                      <strong class="winners-grd-date">25/11/2020</strong>
+                    </div>
+                  </div>
+                </div>
+                <div class="winnersSlideItem">
+                  <div class="winners-grd-item">
+                    <div class="winners-grd-item-fea-img-cntlr">
+                      <a class="overlay-link" href="#"></a>
+                      <div class="inline-bg" style="background: url(assets/images/winner-hm--Img-04.jpg);"></div>
+                    </div>
+                    <div class="winners-grd-item-des mHc">
+                      <h6 class="fl-h6 mHc1 hwgid-title"><a href="#">ROLEX DEEPSEA BLUE LIMITED EDITION</a></h6>
+                      <strong class="winners-grd-date">03/11/2020</strong>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+          </div>
+          <div class="col-md-12">
             <div class="lwsc-btn">
               <a class="fl-btn" href="#">SEE ALL WINNERS</a>
             </div>
@@ -660,7 +763,7 @@
 
 <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
 <script src="https://cdn.jsdelivr.net/jquery.counterup/1.0/jquery.counterup.min.js"></script>
-
+<script src="assets/js/masonry.pkgd.min.js"></script>
 <script src="assets/js/main.js"></script>
 
 </body>
