--- a/themes/wwcomps/front-page.html
+++ b/themes/wwcomps/front-page.html
@@ -474,7 +474,7 @@
     </div> 
   </div>
 
-  <div class="lates-winners-sec-con inline-bg" style="background: url(assets/images/lates-winners-sec-con-bg.jpg);">
+  <div class="lates-compititions-sec-con inline-bg" style="background: url(assets/images/lates-winners-sec-con-bg.jpg);">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -489,6 +489,156 @@
                   </ul>
                 </div>
              </div>
+          </div>
+          <div class="col-md-12">
+            <div class="filter-slider-cntlr">
+              <div class="latesCompititionsSlider">
+                <div class="latesCompititionsSlideItem">
+                  <div class="product-grd-item">
+                    <div class="pro-fea-img-cntlr">
+                      <a class="overlay-link" href="#"></a>
+                      <div class="inline-bg" style="background: url(assets/images/latest-compitions-img-01.jpg);"></div>
+                      <div class="pro-absolute-text">
+                        <span>NEW PRICE!</span>
+                      </div>
+                    </div>
+                    <div class="product-grd-item-des mHc">
+                      <h3 class="fl-h6 pgid-title"><a href="#">XBOX SERIES X</a></h3>
+                      <div class="pro-grd-price">
+                        <span class="price">
+                          <span class="woocommerce-Price-amount amount">
+                            <bdi>
+                              <span class="woocommerce-Price-currencySymbol">£</span>3.99
+                            </bdi>
+                            <del>
+                              <span class="woocommerce-Price-currencySymbol">£</span>5.99
+                            </del>
+                          </span>
+                        </span>
+                      </div>
+                    </div>
+                    <div class="pro-grd-ftr-bar">
+                      <div class="pro-grd-date">
+                        <i><img src="assets/images/days-icon.svg"></i>
+                        <span>14 days left</span>
+                      </div>
+                      <div class="pro-grd-time">
+                        <i><img src="assets/images/avater-icon.svg"></i>
+                        <span>20 tickets pp</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="latesCompititionsSlideItem">
+                  <div class="product-grd-item">
+                    <div class="pro-fea-img-cntlr">
+                      <a class="overlay-link" href="#"></a>
+                      <div class="inline-bg" style="background: url(assets/images/latest-compitions-img-01.jpg);"></div>
+                      <div class="pro-absolute-text">
+                        <span>NEW PRICE!</span>
+                      </div>
+                    </div>
+                    <div class="product-grd-item-des mHc">
+                      <h3 class="fl-h6 pgid-title"><a href="#">XBOX SERIES X</a></h3>
+                      <div class="pro-grd-price">
+                        <span class="price">
+                          <span class="woocommerce-Price-amount amount">
+                            <bdi>
+                              <span class="woocommerce-Price-currencySymbol">£</span>3.99
+                            </bdi>
+                            <del>
+                              <span class="woocommerce-Price-currencySymbol">£</span>5.99
+                            </del>
+                          </span>
+                        </span>
+                      </div>
+                    </div>
+                    <div class="pro-grd-ftr-bar">
+                      <div class="pro-grd-date">
+                        <i><img src="assets/images/days-icon.svg"></i>
+                        <span>14 days left</span>
+                      </div>
+                      <div class="pro-grd-time">
+                        <i><img src="assets/images/avater-icon.svg"></i>
+                        <span>20 tickets pp</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="latesCompititionsSlideItem">
+                  <div class="product-grd-item">
+                    <div class="pro-fea-img-cntlr">
+                      <a class="overlay-link" href="#"></a>
+                      <div class="inline-bg" style="background: url(assets/images/latest-compitions-img-01.jpg);"></div>
+                      <div class="pro-absolute-text">
+                        <span>NEW PRICE!</span>
+                      </div>
+                    </div>
+                    <div class="product-grd-item-des mHc">
+                      <h3 class="fl-h6 pgid-title"><a href="#">XBOX SERIES X</a></h3>
+                      <div class="pro-grd-price">
+                        <span class="price">
+                          <span class="woocommerce-Price-amount amount">
+                            <bdi>
+                              <span class="woocommerce-Price-currencySymbol">£</span>3.99
+                            </bdi>
+                            <del>
+                              <span class="woocommerce-Price-currencySymbol">£</span>5.99
+                            </del>
+                          </span>
+                        </span>
+                      </div>
+                    </div>
+                    <div class="pro-grd-ftr-bar">
+                      <div class="pro-grd-date">
+                        <i><img src="assets/images/days-icon.svg"></i>
+                        <span>14 days left</span>
+                      </div>
+                      <div class="pro-grd-time">
+                        <i><img src="assets/images/avater-icon.svg"></i>
+                        <span>20 tickets pp</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="latesCompititionsSlideItem">
+                  <div class="product-grd-item">
+                    <div class="pro-fea-img-cntlr">
+                      <a class="overlay-link" href="#"></a>
+                      <div class="inline-bg" style="background: url(assets/images/latest-compitions-img-01.jpg);"></div>
+                      <div class="pro-absolute-text">
+                        <span>NEW PRICE!</span>
+                      </div>
+                    </div>
+                    <div class="product-grd-item-des mHc">
+                      <h3 class="fl-h6 pgid-title"><a href="#">XBOX SERIES X</a></h3>
+                      <div class="pro-grd-price">
+                        <span class="price">
+                          <span class="woocommerce-Price-amount amount">
+                            <bdi>
+                              <span class="woocommerce-Price-currencySymbol">£</span>3.99
+                            </bdi>
+                            <del>
+                              <span class="woocommerce-Price-currencySymbol">£</span>5.99
+                            </del>
+                          </span>
+                        </span>
+                      </div>
+                    </div>
+                    <div class="pro-grd-ftr-bar">
+                      <div class="pro-grd-date">
+                        <i><img src="assets/images/days-icon.svg"></i>
+                        <span>14 days left</span>
+                      </div>
+                      <div class="pro-grd-time">
+                        <i><img src="assets/images/avater-icon.svg"></i>
+                        <span>20 tickets pp</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="col-md-12">
             <div class="lwsc-btn">
