--- a/themes/wwcomps/index.html
+++ b/themes/wwcomps/index.html
@@ -134,6 +134,7 @@
 <script src="assets/js/jquery.matchHeight-min.js"></script>
 <script src="assets/js/app.js"></script>
 <script src="assets/js/wow.min.js"></script>
+<script src="assets/js/masonry.pkgd.min.js"></script>
 <script src="assets/js/main.js"></script>
 
 </body>
