--- a/themes/wwcomps/ended-competitions.html
+++ b/themes/wwcomps/ended-competitions.html
@@ -245,12 +245,12 @@
                       </div>
                     </div>
                     <div class="product-grd-item-des mHc">
-                      <h3 class="fl-h6 pgid-title"><a href="#">2010 FOCUS ST-3 + £500</a></h3>
+                      <h3 class="fl-h6 pgid-title"><a href="#">LAND ROVER DEFENDER 90 OFF ROADER</a></h3>
                       <div class="pro-grd-price">
                         <span class="price">
                           <span class="woocommerce-Price-amount amount">
                             <bdi>
-                              <span class="woocommerce-Price-currencySymbol">£</span>19.99
+                              <span class="woocommerce-Price-currencySymbol">£</span>29.99
                             </bdi>
                           </span>
                         </span>
@@ -291,12 +291,12 @@
                       </div>
                     </div>
                     <div class="product-grd-item-des mHc">
-                      <h3 class="fl-h6 pgid-title"><a href="#">2010 FOCUS ST-3 + £500</a></h3>
+                      <h3 class="fl-h6 pgid-title"><a href="#">OMEGA SEAMASTER PLANET OCEAN 600M</a></h3>
                       <div class="pro-grd-price">
                         <span class="price">
                           <span class="woocommerce-Price-amount amount">
                             <bdi>
-                              <span class="woocommerce-Price-currencySymbol">£</span>19.99
+                              <span class="woocommerce-Price-currencySymbol">£</span>3.75
                             </bdi>
                           </span>
                         </span>
@@ -314,12 +314,12 @@
                       </div>
                     </div>
                     <div class="product-grd-item-des mHc">
-                      <h3 class="fl-h6 pgid-title"><a href="#">2010 FOCUS ST-3 + £500</a></h3>
+                      <h3 class="fl-h6 pgid-title"><a href="#">£2000 CASH COMPETITION</a></h3>
                       <div class="pro-grd-price">
                         <span class="price">
                           <span class="woocommerce-Price-amount amount">
                             <bdi>
-                              <span class="woocommerce-Price-currencySymbol">£</span>19.99
+                              <span class="woocommerce-Price-currencySymbol">£</span>2.50
                             </bdi>
                           </span>
                         </span>
@@ -337,12 +337,12 @@
                       </div>
                     </div>
                     <div class="product-grd-item-des mHc">
-                      <h3 class="fl-h6 pgid-title"><a href="#">2010 FOCUS ST-3 + £500</a></h3>
+                      <h3 class="fl-h6 pgid-title"><a href="#">SAMSUNG 75”8K QLED TV BUNDLE</a></h3>
                       <div class="pro-grd-price">
                         <span class="price">
                           <span class="woocommerce-Price-amount amount">
                             <bdi>
-                              <span class="woocommerce-Price-currencySymbol">£</span>19.99
+                              <span class="woocommerce-Price-currencySymbol">£</span>3.50
                             </bdi>
                           </span>
                         </span>
@@ -360,12 +360,12 @@
                       </div>
                     </div>
                     <div class="product-grd-item-des mHc">
-                      <h3 class="fl-h6 pgid-title"><a href="#">2010 FOCUS ST-3 + £500</a></h3>
+                      <h3 class="fl-h6 pgid-title"><a href="#">FERRARI 458 ITALIA + £5000</a></h3>
                       <div class="pro-grd-price">
                         <span class="price">
                           <span class="woocommerce-Price-amount amount">
                             <bdi>
-                              <span class="woocommerce-Price-currencySymbol">£</span>19.99
+                              <span class="woocommerce-Price-currencySymbol">£</span>7.66
                             </bdi>
                           </span>
                         </span>
@@ -383,12 +383,12 @@
                       </div>
                     </div>
                     <div class="product-grd-item-des mHc">
-                      <h3 class="fl-h6 pgid-title"><a href="#">2010 FOCUS ST-3 + £500</a></h3>
+                      <h3 class="fl-h6 pgid-title"><a href="#">XBOX SERIES X </a></h3>
                       <div class="pro-grd-price">
                         <span class="price">
                           <span class="woocommerce-Price-amount amount">
                             <bdi>
-                              <span class="woocommerce-Price-currencySymbol">£</span>19.99
+                              <span class="woocommerce-Price-currencySymbol">£</span>3.99
                             </bdi>
                           </span>
                         </span>
@@ -406,12 +406,12 @@
                       </div>
                     </div>
                     <div class="product-grd-item-des mHc">
-                      <h3 class="fl-h6 pgid-title"><a href="#">2010 FOCUS ST-3 + £500</a></h3>
+                      <h3 class="fl-h6 pgid-title"><a href="#">£50,000 TAX FREE CASH</a></h3>
                       <div class="pro-grd-price">
                         <span class="price">
                           <span class="woocommerce-Price-amount amount">
                             <bdi>
-                              <span class="woocommerce-Price-currencySymbol">£</span>19.99
+                              <span class="woocommerce-Price-currencySymbol">£</span>9.99
                             </bdi>
                           </span>
                         </span>
@@ -422,6 +422,21 @@
                 
               </ul>
             </div>
+        </div>
+        <div class="col-sm-12">
+          <div class="products-grd-page-pagi">
+            <div class="fl-pagi-cntlr">
+              <ul class="clear-fix page-numbers">
+                <li><a class="prev page-numbers" href="#"></a></li>
+                <li><span aria-current="page" class="page-numbers current">1</span></li>
+                <li><a class="page-numbers" href="#">2</a></li>
+                <li><a class="page-numbers" href="#">3</a></li>
+                <li><span class="page-numbers dots">…</span></li>
+                <li><a class="page-numbers" href="#">25</a></li>
+                <li><a class="next page-numbers" href="#"></a></li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
   </div>    
