--- a/themes/wwcomps/front-page.html
+++ b/themes/wwcomps/front-page.html
@@ -138,11 +138,11 @@
             </div>
             <div class="header-top-right">
               <div class="hdr-top-rt-login">
-                <button>Login</button>
+                <a href="#">Login</a>
                 <i><img src="assets/images/user-icon.svg" alt=""></i>
               </div>
               <div class="hdr-top-rt-register">
-                <button>Register</button>
+                <a href="#">Register</a>
                 <i><img src="assets/images/hdr-top-line.svg" alt=""></i>
               </div>
             </div>
@@ -186,7 +186,7 @@
               </div>
               <div class="hdr-add-to-card">
                 <div class="hdr-add-to-card-icon">
-                  <img src="assets/images/Cart-icon.svg" alt="">
+                  <a href="#"><img src="assets/images/Cart-icon.svg" alt=""></a>
                   <span class="hdr-add-to-card-items">2</span>
                 </div>
               </div>
