--- a/themes/wwcomps/front-page.html
+++ b/themes/wwcomps/front-page.html
@@ -90,13 +90,13 @@
 
 </head>
 <body>
-<header class="header">
-  <div class="header-top">
+<header class="header-warp">
+  <div class="top-bar">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <div class="header-top-cntlr">
-            <div class="header-top-socials">
+          <div class="top-bar-cntlr">
+            <div class="top-bar-socials">
               <ul class="reset-list">
                 <li>
                   <a href="#">
@@ -136,34 +136,45 @@
 
               </ul>
             </div>
-            <div class="header-top-right">
-              <div class="hdr-top-rt-login">
-                <a href="#">Login</a>
-                <i><img src="assets/images/user-icon.svg" alt=""></i>
-              </div>
-              <div class="hdr-top-rt-register">
-                <a href="#">Register</a>
-                <i><img src="assets/images/hdr-top-line.svg" alt=""></i>
-              </div>
+            <div class="top-bar-right">
+              <ul class="reset-list">
+                <li>
+                  <div class="top-bar-rt-login top-bar-rt-col">
+                    <a href="#">
+                      <span>Login</span>
+                      <i><img src="assets/images/user-icon.svg" alt=""></i>
+                    </a>
+                  </div>
+                </li>
+
+                <li>
+                  <div class="top-bar-rt-register top-bar-rt-col">
+                    <a href="#"><span>Register</span></a>
+                  </div>
+                </li>
+              </ul>
+              
+              
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="header-bottom">
+
+  <div class="header">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <div class="header-bottom-cntlr">
-            <div class="hdr-btm-left">
+          <div class="header-cntlr">
+            <div class="hdr-left">
               <div class="logo">
                 <a href="#">
                   <img src="assets/images/logo.svg" alt="">
                 </a>
               </div>
             </div>
-            <div class="hdr-btm-right">
+            <div class="hdr-right">
               <div class="hdr-menu">
                 <nav class="main-nav">
                   <ul class="clearfix reset-list">
