--- a/themes/wwcomps/forest-projects.html
+++ b/themes/wwcomps/forest-projects.html
@@ -203,7 +203,7 @@
         <div class="lucky-winner-desc-cntlr">
           <div class="lucky-winner-slider luckyWinnerSlider">
             <div class="lw-slide-item-cntlr">
-              <div class="lw-slide-item-desc forest-proj">
+              <div class="lw-slide-item-desc forest-proj-slide-item-des">
                 <i><img src="assets/images/white-angle-right.png" alt=""></i>
                 <h1 class="lw-slide-item-title">ALL OUR COMPETITION PROFITS,
                 <span>GO TO FOREST RESTORATION.</span></h1>
@@ -214,17 +214,17 @@
                   <ul class="reset-list">
                     <li>
                       <div class="counter-item">
-                        <div class="counter-item-img"><img src="assets/images/counter-item-img-001.svg" alt=""></div>
-                        <strong class="number-of-counter"><span class="counter">1900</span>+</strong>
-                        <h6 class="counter-item-sub-title">TICKETS SOLD</h6>
+                        <div class="counter-item-img"><img src="assets/images/frst-proj-img1.png" alt=""></div>
+                        <strong class="number-of-counter">£<span class="counter">166</span>k</strong>
+                        <h6 class="counter-item-sub-title">MONEY RAISED</h6>
                       </div>
                     </li>
 
                     <li>
                       <div class="counter-item">
-                        <div class="counter-item-img"><img src="assets/images/counter-item-img-002.svg" alt=""></div>
-                        <strong class="number-of-counter"><span class="counter">359</span></strong>
-                        <h6 class="counter-item-sub-title">TICKETS SOLD</h6>
+                        <div class="counter-item-img"><img src="assets/images/frst-proj-img2.png" alt=""></div>
+                        <strong class="number-of-counter"><span class="counter">4421</span>+</strong>
+                        <h6 class="counter-item-sub-title">TREES PLANTED</h6>
                       </div>
                     </li>
                   </ul>
