--- a/themes/wwcomps/contact-us.html
+++ b/themes/wwcomps/contact-us.html
@@ -250,7 +250,10 @@
             </form>
           </div>
           <a class="" href="#"></a>
-          <span><img src="assets/images/angle-rgt-white-2.png" alt=""></span>
+          <span>
+            <img class="desktop angle-desk" src="assets/images/angle-rgt-white-2.png" alt="">
+            <img class="mobile angle-mobile" src="assets/images/angle-rgt-white-res-3.png" alt="">
+          </span>
         </div>
       </div>
     </div>
@@ -281,7 +284,7 @@
             <li>
               <div class="qck-lnk-item mHc">
                 <div class="qck-lnk-img">
-                  <i><img src="assets/images/location-ico.png" alt=""></i>
+                 <img src="assets/images/location-ico.png" alt="">
                 </div>
                 <div class="qck-lnk-item-des inline-bg mHc1">
                   <h5 class="fl-h5 qck-lnk-title">address</h5>
@@ -296,7 +299,7 @@
             <li>
               <div class="qck-lnk-item mHc">
                 <div class="qck-lnk-img">
-                  <i><img src="assets/images/phone-icon.png" alt=""></i>
+                 <img src="assets/images/phone-icon.png" alt="">
                 </div>
                 <div class="qck-lnk-item-des inline-bg mHc1">
                   <h5 class="fl-h5 qck-lnk-title">telephone</h5>
@@ -309,7 +312,7 @@
             <li>
               <div class="qck-lnk-item mHc">
                 <div class="qck-lnk-img">
-                  <i><img src="assets/images/mail-icon.png" alt=""></i>
+                 <img src="assets/images/mail-icon.png" alt="">
                 </div>
                 <div class="qck-lnk-item-des inline-bg mHc1">
                   <h5 class="fl-h5 qck-lnk-title">email</h5>
