--- a/themes/wwcomps/front-page.html
+++ b/themes/wwcomps/front-page.html
@@ -221,12 +221,13 @@
       <div class="col-md-12">
         <div class="lucky-winner-desc-cntlr">
           <div class="lucky-winner-slider luckyWinnerSlider">
+
             <div class="lw-slide-item-cntlr">
               <div class="lw-slide-item-desc">
                 <i><img src="assets/images/white-angle-right.png" alt=""></i>
-                <h1 class="lw-slide-item-title">ONE LUCKY WINNER HAS 
-                <span>THE CHANCE TO WIN THIS...</span></h1>
-                <h3 class="lw-slide-item-sub-title">XBOX SERIES X</h3>
+                <h2 class="lw-slide-item-title fl-h2">ONE LUCKY WINNER HAS 
+                <span>THE CHANCE TO WIN THIS...</span></h2>
+                <h3 class="lw-slide-item-sub-title fl-h2">XBOX SERIES X</h3>
                 <p>An XBOX Series X and have it delivered before Xmas!<br>
                 Win the most exciting gift this Christmas for a fraction of the price.</p>
                 <div class="lw-si-prize-cntlr">
@@ -237,7 +238,7 @@
                         <span class="woocommerce-Price-currencySymbol"> £</span>19.99
                       </bdi>
                     </span>
-                    <i><del>£5.99</del></i>
+                    <del><span class="woocommerce-Price-currencySymbol">£</span>5.99</del>
                   </span>
                 </div>
                 <div class="lw-si-btn">
@@ -249,9 +250,9 @@
             <div class="lw-slide-item-cntlr">
               <div class="lw-slide-item-desc">
                 <i><img src="assets/images/white-angle-right.png" alt=""></i>
-                <h2 class="lw-slide-item-title">ONE LUCKY WINNER HAS 
-                <span>THE CHANCE TO WIN THIS... 2</span></h2>
-                <h3 class="lw-slide-item-sub-title">XBOX SERIES X</h3>
+                <h2 class="lw-slide-item-title fl-h2">ONE LUCKY WINNER HAS 
+                <span>THE CHANCE TO WIN THIS...</span></h2>
+                <h3 class="lw-slide-item-sub-title fl-h2">XBOX SERIES X</h3>
                 <p>An XBOX Series X and have it delivered before Xmas!<br>
                 Win the most exciting gift this Christmas for a fraction of the price.</p>
                 <div class="lw-si-prize-cntlr">
@@ -262,7 +263,7 @@
                         <span class="woocommerce-Price-currencySymbol"> £</span>19.99
                       </bdi>
                     </span>
-                    <i><del>£5.99</del></i>
+                    <del><span class="woocommerce-Price-currencySymbol">£</span>5.99</del>
                   </span>
                 </div>
                 <div class="lw-si-btn">
@@ -274,9 +275,9 @@
             <div class="lw-slide-item-cntlr">
               <div class="lw-slide-item-desc">
                 <i><img src="assets/images/white-angle-right.png" alt=""></i>
-                <h2 class="lw-slide-item-title">ONE LUCKY WINNER HAS 
-                <span>THE CHANCE TO WIN THIS... 3</span></h2>
-                <h3 class="lw-slide-item-sub-title">XBOX SERIES X</h3>
+                <h2 class="lw-slide-item-title fl-h2">ONE LUCKY WINNER HAS 
+                <span>THE CHANCE TO WIN THIS...</span></h2>
+                <h3 class="lw-slide-item-sub-title fl-h2">XBOX SERIES X</h3>
                 <p>An XBOX Series X and have it delivered before Xmas!<br>
                 Win the most exciting gift this Christmas for a fraction of the price.</p>
                 <div class="lw-si-prize-cntlr">
@@ -287,7 +288,7 @@
                         <span class="woocommerce-Price-currencySymbol"> £</span>19.99
                       </bdi>
                     </span>
-                    <i><del>£5.99</del></i>
+                    <del><span class="woocommerce-Price-currencySymbol">£</span>5.99</del>
                   </span>
                 </div>
                 <div class="lw-si-btn">
@@ -299,9 +300,9 @@
             <div class="lw-slide-item-cntlr">
               <div class="lw-slide-item-desc">
                 <i><img src="assets/images/white-angle-right.png" alt=""></i>
-                <h2 class="lw-slide-item-title">ONE LUCKY WINNER HAS 
-                <span>THE CHANCE TO WIN THIS... 3</span></h2>
-                <h3 class="lw-slide-item-sub-title">XBOX SERIES X</h3>
+                <h2 class="lw-slide-item-title fl-h2">ONE LUCKY WINNER HAS 
+                <span>THE CHANCE TO WIN THIS...</span></h2>
+                <h3 class="lw-slide-item-sub-title fl-h2">XBOX SERIES X</h3>
                 <p>An XBOX Series X and have it delivered before Xmas!<br>
                 Win the most exciting gift this Christmas for a fraction of the price.</p>
                 <div class="lw-si-prize-cntlr">
@@ -312,7 +313,7 @@
                         <span class="woocommerce-Price-currencySymbol"> £</span>19.99
                       </bdi>
                     </span>
-                    <i><del>£5.99</del></i>
+                    <del><span class="woocommerce-Price-currencySymbol">£</span>5.99</del>
                   </span>
                 </div>
                 <div class="lw-si-btn">
@@ -324,9 +325,9 @@
             <div class="lw-slide-item-cntlr">
               <div class="lw-slide-item-desc">
                 <i><img src="assets/images/white-angle-right.png" alt=""></i>
-                <h2 class="lw-slide-item-title">ONE LUCKY WINNER HAS 
-                <span>THE CHANCE TO WIN THIS... 3</span></h2>
-                <h3 class="lw-slide-item-sub-title">XBOX SERIES X</h3>
+                <h2 class="lw-slide-item-title fl-h2">ONE LUCKY WINNER HAS 
+                <span>THE CHANCE TO WIN THIS...</span></h2>
+                <h3 class="lw-slide-item-sub-title fl-h2">XBOX SERIES X</h3>
                 <p>An XBOX Series X and have it delivered before Xmas!<br>
                 Win the most exciting gift this Christmas for a fraction of the price.</p>
                 <div class="lw-si-prize-cntlr">
@@ -337,7 +338,7 @@
                         <span class="woocommerce-Price-currencySymbol"> £</span>19.99
                       </bdi>
                     </span>
-                    <i><del>£5.99</del></i>
+                    <del><span class="woocommerce-Price-currencySymbol">£</span>5.99</del>
                   </span>
                 </div>
                 <div class="lw-si-btn">
@@ -345,6 +346,32 @@
                 </div>
               </div>
             </div>
+
+            <div class="lw-slide-item-cntlr">
+              <div class="lw-slide-item-desc">
+                <i><img src="assets/images/white-angle-right.png" alt=""></i>
+                <h2 class="lw-slide-item-title fl-h2">ONE LUCKY WINNER HAS 
+                <span>THE CHANCE TO WIN THIS...</span></h2>
+                <h3 class="lw-slide-item-sub-title fl-h2">XBOX SERIES X</h3>
+                <p>An XBOX Series X and have it delivered before Xmas!<br>
+                Win the most exciting gift this Christmas for a fraction of the price.</p>
+                <div class="lw-si-prize-cntlr">
+                  <strong>TICKET PRICE: </strong>
+                  <span class="price">
+                    <span class="woocommerce-Price-amount amount">
+                      <bdi>
+                        <span class="woocommerce-Price-currencySymbol"> £</span>19.99
+                      </bdi>
+                    </span>
+                    <del><span class="woocommerce-Price-currencySymbol">£</span>5.99</del>
+                  </span>
+                </div>
+                <div class="lw-si-btn">
+                  <a class="fl-btn" href="#">ENTER NOW</a>
+                </div>
+              </div>
+            </div>
+
 
 
           </div>
@@ -585,26 +612,28 @@
 </section>
 
 
-<section class="how-to-play-sec page-banner-section">
-  <div class="banner-bg htp-banner-bg">
-    <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/htp-banner-lft-img.jpg')"></div>
-    <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/htp-banner-rt-img.jpg')"></div>
-  </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="htp-sec-desc-cntlr">
-          <div class="htp-desc-hedding">
-            <h3 class="htp-desc-title">HOW TO <span>PLAY</span></h3>
-            <i><img src="assets/images/blue-arrow.png" alt=""></i>
-          </div>
-          <div class="htp-sec-desc">
-            <i><img src="assets/images/white-angle-left.png" alt=""></i>
-            <h6 class="htp-desc-sub-title">Proin gravida velit auctor aliquet aenean sollicitudin, lorem quis bibendum auctor.</h6>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam non nunc eget lectus consectetur pharetra non in dolor. Phasellus tortor mi, imperdiet porta gravida commodo est id,  iaculis lectus. Sed pretium blandit felis, id tincidunt purus feugiat eu. Nunc id orci porta, iaculis mi nor. 
-            </p>
-            <div class="htp-desc-button">
-              <a class="fl-btn" href="#">READ MORE</a>
+<section class="left-right-desc">
+  <div class="how-to-play-wrap page-banner-section left-right-desc-item">
+    <div class="banner-bg htp-banner-bg">
+      <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/htp-banner-lft-img.jpg')"></div>
+      <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/htp-banner-rt-img.jpg')"></div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="htp-sec-desc-cntlr">
+            <div class="htp-desc-hedding">
+              <h3 class="htp-desc-title fl-h4"><span>HOW TO </span> PLAY</h3>
+              <i><img src="assets/images/blue-arrow.png" alt=""></i>
+            </div>
+            <div class="htp-sec-desc">
+              <i><img src="assets/images/white-angle-left.png" alt=""></i>
+              <h6 class="htp-desc-sub-title fl-h5">Proin gravida velit auctor aliquet aenean sollicitudin, lorem quis bibendum auctor.</h6>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam non nunc eget lectus consectetur pharetra non in dolor. Phasellus tortor mi, imperdiet porta gravida commodo est id,  iaculis lectus. Sed pretium blandit felis, id tincidunt purus feugiat eu. Nunc id orci porta, iaculis mi nor. 
+              </p>
+              <div class="htp-desc-button">
+                <a class="fl-btn" href="#">READ MORE</a>
+              </div>
             </div>
           </div>
         </div>
@@ -612,6 +641,7 @@
     </div>
   </div>
 </section>
+
 
 <section class="how-to-play-sec page-banner-section rstsn-projects-sec">
   <div class="banner-bg rstsn-projects-bg">
