--- a/themes/wwcomps/forest-projects.html
+++ b/themes/wwcomps/forest-projects.html
@@ -192,17 +192,20 @@
 </header>
 
 <section class="lucky-winner-banner page-banner-section">
-  <div class="banner-bg lucky-winner-banner-bg">
-    <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/hit-bnr-page-lft-img.jpg')"></div>
-    <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/lucky-winner-banner-bg-right-img.jpg')"></div>
+  <div class="lucky-winner-slider ">
+    <div class="lw-slide-item-cntlr">
+      <div class="banner-bg lucky-winner-banner-bg">
+        <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/hit-bnr-page-lft-img.jpg')"></div>
+        <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/lucky-winner-banner-bg-right-img.jpg')"></div>
+      </div>
+    </div>
   </div>
-
   <div class="container">
     <div class="row">
       <div class="col-md-12">
         <div class="lucky-winner-desc-cntlr">
-          <div class="lucky-winner-slider luckyWinnerSlider">
-            <div class="lw-slide-item-cntlr">
+          <!-- <div class="lucky-winner-slider"> -->
+            <!-- <div class="lw-slide-item-cntlr"> -->
               <div class="lw-slide-item-desc forest-proj-slide-item-des">
                 <i><img src="assets/images/white-angle-right.png" alt=""></i>
                 <h1 class="lw-slide-item-title">ALL OUR COMPETITION PROFITS,
@@ -211,6 +214,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam non nunc eget lectus consectetur pharetra non in dolor. Phasellus tortor mi, imperdiet porta gravida commodo est id,  iaculis lectus. Sed pretium blandit felis, id tincidunt purus feugiat eu. Nunc id orci porta, iaculis. <br>
                 Win the most exciting gift this Christmas for a fraction of the price.</p>
                 <div class="counter-up-cntlr">
+                  <span><img src="assets/images/fp-angel-img.png" alt=""></span>
                   <ul class="reset-list">
                     <li>
                       <div class="counter-item">
@@ -231,8 +235,8 @@
                 </div>
               </div>
             
-            </div>
-          </div>
+            <!-- </div> -->
+         <!--  </div> -->
         </div>
       </div>
     </div>
