--- a/themes/wwcomps/forest-projects.html
+++ b/themes/wwcomps/forest-projects.html
@@ -191,14 +191,28 @@
   </div>
 </header>
 
-<section class="lucky-winner-banner page-banner-section">
-  <div class="lucky-winner-slider ">
-    <div class="lw-slide-item-cntlr">
-      <div class="banner-bg lucky-winner-banner-bg">
-        <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/hit-bnr-page-lft-img.jpg')"></div>
-        <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/lucky-winner-banner-bg-right-img.jpg')"></div>
+<section class="lucky-winner-banner page-banner-section forest-proj-sec">
+  
+   
+        <div class="banner-bg lucky-winner-banner-bg">
+          <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/hit-bnr-page-lft-img.jpg')"></div>
+          <div class="banner-bg-rgt-cntlr">
+           <div class="lucky-winner-slider frstProjSlider">
+            
+            <div class="lw-slide-item-rgt-cntlr">
+              <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/rstsn-projects-bnr-rt-img.jpg')"></div>
+            </div>
+            <div class="lw-slide-item-rgt-cntlr">
+              <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/rstsn-projects-bnr-rt-img.jpg')"></div>
+            </div>
+            <div class="lw-slide-item-rgt-cntlr">
+              <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/rstsn-projects-bnr-rt-img.jpg')"></div>
+            </div>
+            <div class="lw-slide-item-rgt-cntlr">
+              <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/rstsn-projects-bnr-rt-img.jpg')"></div>
+            </div>
+        </div>
       </div>
-    </div>
   </div>
   <div class="container">
     <div class="row">
